--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -6,7 +6,20 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
 .container{
-    width: 80%;
+    width: 85%;
     margin: 0 auto;
+}
+
+ul{
+    list-style-type: none;
+}
+
+a{
+    text-decoration:none;
+    color: #000000;
 }
